[CEPLL] fix: minor

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
 
   <p class="description">
     Words from the <b>Original</b> list will be replaced
-    <br>by the words from the <b>Translation</b> list, on every website you visit!
+    <br>by words from the <b>Translation</b> list on every website you visit!
   </p>
 
   <form id="add-todo-form">
