[CEPLL] shore: add folder structure

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,13 +2,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="popup.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="list.css">
-  <link rel="stylesheet" href="form.css">
-  <link rel="stylesheet" href="bubbles.css">
-  <script src="popup.js"></script>
-  <script src="grass.js"></script>
+  <link rel="stylesheet" href="css/popup.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/list.css">
+  <link rel="stylesheet" href="css/form.css">
+  <link rel="stylesheet" href="css/bubbles.css">
+  <script src="js/popup.js"></script>
+  <script src="js/grass.js"></script>
   <title>Passive Language Learning</title>
 </head>
 
