[CEPLL] shore: create bubble web component

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,19 +6,21 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/list.css">
   <link rel="stylesheet" href="css/form.css">
-  <link rel="stylesheet" href="css/bubbles.css">
   <script src="js/popup.js"></script>
-  <script src="js/grass.js"></script>
+  <script src="js/components/grass-background.js"></script>
+  <script src="js/components/bubble-background.js"></script>
   <title>Passive Language Learning</title>
 </head>
 
 <body>
 
 <main>
-  <header>
-    <h1>Passive Language Learning</h1>
-    <span class="made-in-ukraine-with-love">Made in Ukraine with love!</span>
-  </header>
+  <pll-bubble-background>
+    <header>
+        <h1>Passive Language Learning</h1>
+        <span class="made-in-ukraine-with-love">Made in Ukraine with love!</span>
+    </header>
+  </pll-bubble-background>
 
 <!--  <p class="description">-->
 <!--    Words from the <b>Original</b> column will be replaced-->
@@ -27,7 +29,7 @@
 
 
   <pll-grass-background>
-      <section class="items">
+      <section class="list">
           <div class="list-header">
               <div><b>#</b></div>
               <div><b>Original</b></div>
