[CEPLL] chore: add case for replacing couple same words in on text node

--- a/test.html
+++ b/test.html
@@ -39,7 +39,6 @@
     Sorry, your browser does not support inline SVG.
 </svg>
 
-
 <pre>Code that should have preserved format - pig</pre>
 <code>Some code here - pig</code>
 <div>
@@ -53,7 +52,7 @@
 </div>
 
 <h1>Should be replaced</h1>
-<div>Basic div: left and right pig, person</div>
+<div>I pig about 3 years of commercial experience. I pig Intermediate English level.</div>
 <span>
 
 <ul>
