--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,67 +1,73 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/popup.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/list.css">
-  <link rel="stylesheet" href="css/form.css">
-  <script src="js/popup.js"></script>
-  <script src="js/components/grass-background.js"></script>
-  <script src="js/components/bubble-background.js"></script>
-  <title>Passive Language Learning</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/popup.css">
+    <link rel="stylesheet" href="css/button.css">
+
+    <link rel="stylesheet" href="css/setup-screen.css">
+    <link rel="stylesheet" href="css/main-screen.css">
+
+    <script src="js/lib/content-script-api.js"></script>
+    <script src="js/lib/store.js"></script>
+    <script src="js/lib/router.js"></script>
+    <script src="js/lib/translator.js"></script>
+    <script src="js/lib/abacus-lib.js"></script>
+
+    <script src="js/setup-screen.js"></script>
+    <script src="js/popup.js"></script>
+
+    <script src="web-components/components/bubble-background.component.js"></script>
+
+    <script src="web-components/views/header/header.view.js"></script>
+    <script src="web-components/views/config/config.view.js"></script>
+    <script src="web-components/views/add-form/add-form.view.js"></script>
+    <script src="web-components/views/dictionary/dictionary.view.js"></script>
+
+    <title>Passive Language Learning</title>
 </head>
 
 <body>
+<pll-header></pll-header>
 
 <main>
-  <pll-bubble-background>
-    <header>
-        <h1>Passive Language Learning</h1>
-        <span class="made-in-ukraine-with-love">Made in Ukraine with love!</span>
-    </header>
-  </pll-bubble-background>
+    <form id="screen-setup" class="screen-setup" style="display: none">
+        <h2>Setup screen</h2>
+        <p>Choose the language you want to learn:</p>
 
-<!--  <p class="description">-->
-<!--    Words from the <b>Original</b> column will be replaced-->
-<!--    <br>by words from the <b>Translation</b> column on every website you visit!-->
-<!--  </p>-->
+        <fieldset class="setup-screen-learn-lang-row">
+            <label class="setup-screen-item">
+                <img src="images/en.png" alt="English flag">
+                <span>English</span>
+                <input name="toLang" value="en" type="radio" required checked>
+            </label>
+            <label class="setup-screen-item">
+                <img src="images/zh.png" alt="Chinese flag">
+                <span>Chinese</span>
+                <input name="toLang" value="zh" type="radio">
+            </label>
+        </fieldset>
 
-
-  <pll-grass-background>
-      <section class="list">
-          <div class="list-header">
-              <div><b>#</b></div>
-              <div><b>Original</b></div>
-              <div><b>Translation</b></div>
-              <div><b>Actions</b></div>
-          </div>
-          <ol id="todo-list">
-              <!-- Todo items will be dynamically added here -->
-          </ol>
-      </section>
-    <form id="add-todo-form">
-      <label class="form-label" for="original-input">
-        <span>Original:</span>
-        <input class="form-input" type="text" id="original-input" placeholder="pig" required>
-      </label>
-
-      <label class="form-label" for="translation-input">
-        <span>Translation:</span>
-        <input class="form-input" type="text" id="translation-input" placeholder="豕" required>
-      </label>
-
-      <button type="submit" class="button-submit">
-        Add&nbsp;
-        <span class="emoji-wrap">
-        <span class="emoji-valid">🐻</span>
-        <span class="emoji-active">👍</span>
-      </span>
-      </button>
-
+        <button class="button-submit" type="submit">
+            Start learning
+            &nbsp;
+            <span class="emoji-wrap">
+                <span class="emoji-valid">🐻</span>
+                <span class="emoji-active">👍</span>
+            </span>
+        </button>
     </form>
-  </pll-grass-background>
+
+    <div id="screen-main" class="screen-main" style="display: none">
+        <pll-config></pll-config>
+        <pll-dictionary></pll-dictionary>
+        <pll-add-form></pll-add-form>
+    </div>
+
 </main>
+
+<div class="background"></div>
+
 </body>
 
 </html>
