[CEPLL-25] feat: add selection opt for native ctx menu

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="css/setup-screen.css">
     <link rel="stylesheet" href="css/main-screen.css">
 
-    <script src="js/lib/content-script-api.js"></script>
-    <script src="js/lib/store.js"></script>
-    <script src="js/lib/router.js"></script>
-    <script src="js/lib/translator.js"></script>
-    <script src="js/lib/abacus-lib.js"></script>
+    <script src="js-lib/content-script-api.js"></script>
+    <script src="js-lib/store.js"></script>
+    <script src="js-lib/router.js"></script>
+    <script src="js-lib/abacus-lib.js"></script>
 
-    <script src="js/popup.js"></script>
+    <script src="app/core/initial-routing.js"></script>
+    <script src="app/core/ui-theme.js"></script>
 
-    <script src="web-components/components/bubble-background.component.js"></script>
+    <script src="app/components/bubble-background.component.js"></script>
 
-    <script src="web-components/views/header/header.view.js"></script>
-    <script src="web-components/views/config/config.view.js"></script>
-    <script src="web-components/views/add-form/add-form.view.js"></script>
-    <script src="web-components/views/dictionary/dictionary.view.js"></script>
-    <script src="web-components/views/setup-screen/setup-screen.view.js"></script>
+    <script src="app/views/header/header.view.js"></script>
+    <script src="app/views/config/config.view.js"></script>
+    <script src="app/views/add-form/add-form.view.js"></script>
+    <script src="app/views/dictionary/dictionary.view.js"></script>
+    <script src="app/views/setup-screen/setup-screen.view.js"></script>
 
     <title>Passive Language Learning</title>
 </head>
