[CEPLL] Updates November, 5 months

--- a/src/test.html
+++ b/src/test.html
@@ -69,10 +69,10 @@
                 <div>
                     <ul>
                         <li>person settings</li>
-                        <li>person</li>
+                        <li>Person</li>
                         <li>persons</li>
                         <li>For person settings</li>
-                        <li>for person</li>
+                        <li>for Person</li>
                         <li>for persons</li>
                     </ul>
 
